# w2w

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LCZ_UCP_default.csv  LICENSE  README.md  requirements-dev.txt  setup.cfg  test.patch  tox.ini  w2w.py  w2w.yml  w2w_environment.yml  w2w_requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  issue_template.yml
.github/workflows/: ci.yml  draft-pdf.yml
JOSS/: paper.bib  paper.md
sample_data/: Plotting_W2W-BeforeAfter.ipynb  geo_em.d01.nc  geo_em.d02.nc  geo_em.d03.nc  geo_em.d04.nc  geo_em.d04_NoUrban.nc  geo_em.d04_gridinfo.tif  lcz_zaragoza.tif  plotting_w2w_before_after.ipynb
testing/: 5by5.nc  5by5_20cat.nc  5by5_usgs.nc  LCZ_UCP_lookup.csv  Shanghai.tif  custom_lcz_ucp.csv  custom_lcz_ucp_w_spaces.csv  geo_em.d01_Shanghai_ncl20.nc  geo_em.d01_Shanghai_ncl41.nc  geo_em.d01_Shanghai_no_NUM_LAND_CAT.nc  geo_em.d02_Shanghai.nc  geo_em.d04_LCZ_extent_dummy.nc  geo_em.d04_LCZ_params_dummy.nc  geo_em.d04_LU_GR_map_proj_7.nc  geo_em.d04_NoUrban_dummy.nc  geo_em.d04_gridinfo.tif  lcz_too_small.tif  lcz_zaragoza_clean.tif  lcz_zaragoza_with_long_name.tif
tests/: w2w_test.py
w2w/: w2w.py
w2w/resources/: LCZ_UCP_lookup.csv
