[metadata]
name = w2w
version = v0.1.0
description = A python tool that ingests WUDAPT's Local Climate Zone information into WRF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasdemuzere/w2w
author = Matthias Demuzere, Daniel Argueso, Andrea Zonato, Jonas Kittner
author_email = mdemuzere@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    ecmwflibs
    numpy
    pandas
    rasterio
    rioxarray
    scipy
    xarray[io]
    importlib-metadata;python_version<"3.8"
    importlib-resources;python_version<"3.8"
python_requires = >=3.6.1

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    w2w = w2w.w2w:main

[options.package_data]
w2w.resources = LCZ_UCP_lookup.csv

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 1
