[metadata]
name = w2w
version = 0.5.0
description = A python tool that ingests WUDAPT's Local Climate Zone information into WRF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasdemuzere/w2w
author = Matthias Demuzere, Daniel Argueso, Andrea Zonato, Jonas Kittner
author_email = mdemuzere@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    ecmwflibs
    h5netcdf
    netCDF4
    numpy>=1.21
    pandas
    rasterio>=1.1.6
    rioxarray
    scipy
    tqdm
    xarray>=0.17.0
    importlib-metadata<5.0.0;python_version=="3.7"
    importlib-metadata;python_version<"3.9"
    importlib-resources;python_version<"3.9"
python_requires = >=3.7

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    w2w = w2w.w2w:main

[options.package_data]
w2w.resources = LCZ_UCP_lookup.csv

[bdist_wheel]
universal = True

[coverage:run]
parallel = True
plugins = covdefaults

[coverage:report]
fail_under = 98

[mypy]
plugins = numpy.typing.mypy_plugin
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
